--- a/css/CWAD_general.css
+++ b/css/CWAD_general.css
@@ -43,7 +43,7 @@ nav {
     z-index:1;
 }
 
-@media (min-width: 900px) {
+@media (max-width: 900px) {
     nav {
         align-items: center;
         display: flex;
