--- a/css/CWAD_general.css
+++ b/css/CWAD_general.css
@@ -131,13 +131,13 @@ footer:hover{
     color:rgb(252,114,166);
     text-decoration: underline;
 }
-@media (max-width:565px){
+@media (max-device-width:565px){
     .logo_orsay{
         width:65%;
     }
 }
 
-@media (min-width:565px){
+@media (min-device-width:565px){
     .logo_orsay{
         width:40%;
     }
