--- a/css/CWAD_general.css
+++ b/css/CWAD_general.css
@@ -22,6 +22,12 @@ body {
   
 }
 
+@media (max-device-width: 900px) or (max-width: 900px){
+    body{
+        font-size: 1.5rem;
+    }
+}
+
 a{
     text-decoration:none;
     color:inherit; 
@@ -60,6 +66,7 @@ nav img {
 
 @media (max-device-width: 900px) or (max-width: 900px){
     nav {
+        height: 10rem;
         display: flex;
         flex-direction: column;
         align-items: center; 
@@ -71,7 +78,11 @@ nav img {
         align-items: center;  
         justify-content: center;  
         width: auto;  
-        margin: auto;  
+        margin: auto;
+    }
+    
+    .nav_elements a{
+        margin: 6px;
     }
 
     .logo_yumeton {
